--- a/src/twout.css
+++ b/src/twout.css
@@ -702,6 +702,11 @@ video {
   background-color: rgb(219 234 254 / var(--tw-bg-opacity));
 }
 
+.bg-green-300 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
+}
+
 .p-3 {
   padding: 0.75rem;
 }
